# telegram-channel-monitor

./: .editorconfig  .env.example  .gitattributes  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml  tgmonitor.spec
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: audit.yml  build.yml  ci.yml
docs/: ARCHITECTURE.md
hooks/: hook-aiotdlib.py
scripts/: build_appimage.sh
src/tgmonitor/: __init__.py  __main__.py  app.py
src/tgmonitor/core/: __init__.py  app_service.py  config.py  dto.py  events.py  settings_store.py
src/tgmonitor/core/channel_sync/: __init__.py  service.py
src/tgmonitor/core/export/: __init__.py  base.py  csv_exporter.py  html_exporter.py  json_exporter.py  markdown_exporter.py  service.py
src/tgmonitor/core/monitor/: __init__.py  service.py
src/tgmonitor/core/objectstore/: __init__.py  base.py  factory.py  folder_store.py  local_store.py  s3_store.py
src/tgmonitor/core/storage/: __init__.py  factory.py  jsonl_store.py  mongo_repo.py  postgres_repo.py  repository.py  schema.sql
src/tgmonitor/core/telegram/: __init__.py  client.py  factory.py  fake_client.py  tdlib_client.py
src/tgmonitor/resources/: __init__.py
src/tgmonitor/ui/: __init__.py  icon.py  main_window.py  nav_bar.py  theme.py
src/tgmonitor/ui/resources/: __init__.py  style.qss  style_dark.qss
src/tgmonitor/ui/viewmodels/: __init__.py  monitor_vm.py
src/tgmonitor/ui/widgets/: __init__.py  account_widget.py  channel_widget.py  dashboard_widget.py  export_dialog.py  login_dialog.py  message_detail.py  message_view.py  search_bar.py  settings_dialog.py  settings_page.py  sync_dialog.py
tests/: __init__.py  conftest.py  test_app_run.py  test_channel_sync.py  test_exporters.py  test_folder_store.py  test_jsonl_store.py  test_live_updates.py  test_main_window_channels.py  test_main_window_close.py  test_map_message.py  test_media_downloader.py  test_message_view.py  test_monitor_and_app.py  test_objectstore.py  test_proxy.py  test_reconfigure.py  test_settings_store.py  test_storage.py  test_telegram_lifecycle.py
