[project]
name = "tgmonitor"
version = "0.2.0"
description = "Telegram 频道监听桌面应用 — UI 与 core 分离,监听/保存/导出 三大组件边界清晰"
readme = "README.md"
requires-python = "~=3.13.0"
license = { text = "MIT" }
authors = [{ name = "forcetone" }]

dependencies = [
    # UI
    "PySide6>=6.6",
    "qasync>=0.27",
    # Telegram 官方 (底层 TDLib)
    "aiotdlib==0.27.*",
    # 配置
    "pydantic-settings>=2.2",
    # 导出
    "Jinja2>=3.1",
]

[project.optional-dependencies]
# 选择性安装:实际用哪个 DB 就装哪个(或都装)
postgres = ["asyncpg>=0.29"]
mongo = ["motor>=3.4"]
# 对象存储 (S3 协议: AWS S3 / MinIO / 阿里 OSS)
objectstore = ["aioboto3>=13.0"]
# 一键全装
all = [
    "tgmonitor[postgres,mongo,objectstore]",
]

[project.urls]
# GitHub 仓库位置 — `pip show tgmonitor` 可见;PyPI 上传后 README 顶部 / 包页也可读
Homepage = "https://github.com/forcetone/tgmonitor"
Repository = "https://github.com/forcetone/tgmonitor"
Issues = "https://github.com/forcetone/tgmonitor/issues"
Documentation = "https://github.com/forcetone/tgmonitor/blob/main/docs/ARCHITECTURE.md"

[project.scripts]
tgmonitor = "tgmonitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgmonitor"]
# 默认 hatchling wheel 只装 .py 文件。`importlib.resources.files(...).read_bytes()`
# 跑 wheel install 时需要 SVG / QSS 跟 binary 一起 ship,否则 UI 启动 FileNotFoundError。
# 显式 include 3 类资源:顶层 SVG、icons 子目录、UI QSS。
include = [
    "src/tgmonitor/resources/*.svg",
    "src/tgmonitor/resources/icons/*.svg",
    "src/tgmonitor/ui/resources/*.qss",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC"]
ignore = [
    "E501",   # line length
    "UP042",  # str + Enum is fine for pydantic-settings / json roundtrip
    "UP035",  # typing.AsyncIterator is clearer for older readers
    "SIM105", # contextlib.suppress is less obvious
    "N818",   # exception naming — we use domain names
    "B008",   # default-arg call sites in Qt widgets
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
# 仓库内 Python 源码;branch on 看分支覆盖率
source = ["src/tgmonitor"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "coverage>=7.0",
    "pyinstaller>=6.21.0",
]
